fix collapse panel

--- a/src/styles/panel/_index.scss
+++ b/src/styles/panel/_index.scss
@@ -46,7 +46,7 @@
   }
 
   &.#{$lu_css_prefix}-collapsed {
-    min-width: 0;
+    width: 0;
     transform: unset;
 
     > :not(.#{$lu_css_prefix}-collapser) {
